- updating to gradle-plugin v0.3 - filling up javafx plugin properties - fixing custom tasks - upgrading wrapper to 1.8 - cleaning up